syntax = "proto3";

package proto;

service SdUser {
    rpc GetUserInfo(UserReq) returns (UserResp) {}
}

message User {
    int64 id = 1;
    string name = 2;
}

message UserReq {
    int64 id = 1;
}

message UserResp {
    User user = 1;
}